Fix text overlap on safari
Added it to surface duo. :(
TODO:
        - Fix it in a way that doesn't break for certain display sizes.
        - Add today's dance, special events.
        - Add styling to the 'default' (parent org) images (odd aspect
          ratios will mess things up currently)
        - Show it to people

--- a/public/css/unearth/bacds.css
+++ b/public/css/unearth/bacds.css
@@ -34,6 +34,7 @@
 
 /* if there's multiple photos */
 .event-photos-collage {
+    height: 500px;
     display: grid;
     grid-template-columns: repeat(var(--data-collage-width), 1fr);
     grid-template-rows: repeat(var(--data-collage-width), 1fr);
